Fixing horizontal scrollbar, removing duplicate cshtml, reformatting

--- a/BTCPayServer/wwwroot/main-new/btcpay-0.css
+++ b/BTCPayServer/wwwroot/main-new/btcpay-0.css
@@ -41,7 +41,8 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
 }
 
 p {
@@ -206,7 +207,8 @@ p {
 masterland {
     display: grid;
     min-height: calc(100vh - 10px);
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
 }
 
 
@@ -216,9 +218,7 @@ masterland {
 
 .dark-parent {
     margin: 5vw auto auto 5vw;
-    width: 40vw;
-    max-width: 90vw;
-}
+    max-width: 90vw;}
 
     .dark-parent * {
         color: var(--body-back);
@@ -270,6 +270,13 @@ masterland {
     /* min-width: calc(40vw - 100px); */
     padding: 50px 0 50px 50px;
     margin: auto 0 auto 5vw;
+}
+
+.unfetteredVideoFrame {
+    width: 100%;
+    max-width: 100%;
+    height: calc(100vw * 0.56);
+    margin: auto;
 }
 
 
